--- a/web/layout/stylus/index.styl
+++ b/web/layout/stylus/index.styl
@@ -531,7 +531,7 @@ button.extraFilterButton
 	width: 417px
 	background: white 
 	opacity: 0.99
-	z-index: 1
+	z-index: 5
 	display: flex
 	flex-direction: column
 
